--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "hobbylab.halle.geschmackssache.app"
+        applicationId "hobbylab.halle.Geschmackssache"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode flutterVersionCode.toInteger()
