--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # Needed to fetch data from the internet
+  http: ^0.11.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
