--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   # Needed to fetch data from the internet
   http: ^0.11.0
 
+  # Local data storage
+  shared_preferences: 0.4.3
+
+  # UUID generator
+  uuid: ^1.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
