--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-functions": "^2.0.3",
+    "json2csv": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
